--- a/css/utility-classes.css
+++ b/css/utility-classes.css
@@ -551,6 +551,9 @@ footer.bg-deep {
 .mt-12 {
   margin-top: 12px !important;
 }
+.mb-12 {
+  margin-bottom: 12px !important;
+}
 .mb-25 {
   margin-bottom: 25px !important;
 }
